--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 MONGOOSE_CONNECT = mongodb+srv://Inventor:IamInventor77@cluster0.eebvh.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+
+SECRET_KEY =  lsdkfjsladfjslkdfjalkjdf
