--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "file-loader": "^6.2.0",
+    "formik": "^2.2.9",
     "html-webpack-plugin": "^5.3.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.9",
