--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "proxy": "http://localhost:8000",
   "dependencies": {
     "@babel/core": "^7.15.8",
+    "@babel/polyfill": "^7.12.1",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@babel/runtime": "^7.15.4",
     "@hapi/joi": "^17.1.1",
     "babel-loader": "^8.2.2",
     "bcryptjs": "^2.4.3",
